# conwai

./: .gitignore  FINDINGS.md  IDEAS.md  Makefile  PLAN.md  README.md  REFACTOR.md  balance.py  config.json  harness.py  main.py  poc_scheduler.py  pyproject.toml  test_agent.py  test_compaction.py
conwai/: actions.py  agent.py  app.py  board.py  brain.py  bulletin_board.py  cognitive.py  component.py  config.py  dashboard.py  default_actions.py  embeddings.py  engine.py  environment.py  event_bus.py  event_types.py  events.py  heartbeat.py  llm.py  llm_protocol.py  log_setup.py  message_bus.py  messages.py  perception.py  pool.py  repository.py  scheduler.py  storage.py  store.py  systems.py  tick_loop.py  typemap.py  world.py
docs/: cognitive-pipeline.md  subtick-scheduler.md
experiments/: FINDINGS.md  NOTES.md  analysis-f467ae7-detailed.md  cache_embeddings.py  clustering.py  consolidation.py  consolidation_real.py  helen_embeddings.npz  helen_parsed.json
frontend/: package-lock.json  package.json
prompts/: identity.md  memory.md  scratchpad.md  soul.md  strategy.md  system.md  tick.md
scripts/: bench_vllm.py
tests/: test_action_events.py  test_action_system.py  test_actions.py  test_activation_recall.py  test_agent.py  test_blackboard.py  test_brain.py  test_dashboard.py  test_engine_events.py  test_event_bus.py  test_event_log_subscriber.py  test_importance.py  test_llm_protocol.py  test_perception.py  test_pool.py  test_processes.py  test_repository.py  test_scheduler.py  test_storage.py  test_store.py  test_systems.py  test_tick_loop.py  test_world.py  (+4 more)
(+254 files in other folders)
