[project]
name = "conwai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "openai>=2.28.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
include = ["conwai*", "scenarios*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
