[project]
name = "conwai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "anthropic>=0.84.0",
    "faker>=40.0",
    "fastapi>=0.135.1",
    "numpy>=2.0",
    "fastembed>=0.6,<0.8",
    "onnxruntime==1.23.2",
    "httpx>=0.28",
    "openai>=2.28.0",
    "uvicorn>=0.41.0",
    "structlog>=25.5.0",
]

[tool.setuptools.packages.find]
include = ["conwai*", "scenarios*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
